# mathematical-deblur

./: .gitignore  README.md
.github/workflows/: deploy.yml
rust-core/: Cargo.toml
rust-core/src/: deconvolution.rs  fft2d.rs  kernel.rs  lib.rs  params.rs
web/: index.html  package-lock.json  package.json  readme-examples.mjs  readme-shots.mjs  verify.mjs  vite.config.ts
web/src/: App.tsx  Controls.tsx  deblur.worker.ts  loadImage.ts  main.tsx  styles.css  types.ts  useDeblurEngine.ts
